kernel v5.10.78 rebase with rt: v5.10.78-rt55 device-tree/etc AUFS: https://github.com/sfjro/aufs5-standalone/commit/5436ae4eab9808f58e397cb30018ed3ae5afa2eb BBDTBS: https://github.com/beagleboard/BeagleBoard-DeviceTrees/commit/6c611ee85b0c41a45c36dac7bb1ff7067a5bf31d RT: patch-5.10.78-rt55.patch.xz TI_AMX3_CM3: http://git.ti.com/gitweb/?p=processor-firmware/ti-amx3-cm3-pm-firmware.git;a=commit;h=fb484c5e54f2e31cf0a338d2927a06a2870bcc2c WPANUSB: https://github.com/statropy/wpanusb/commit/251f0167545bf2dcaa3cad991a59dbf5ab05490a BCFSERIAL: https://github.com/statropy/bcfserial/commit/aded88429a8a00143596b41f4c1f50d9ae3d4069 WIRELESS_REGDB: https://git.kernel.org/pub/scm/linux/kernel/git/sforshee/wireless-regdb.git/commit/?id=47007d0169c4c6c855a3fc5333c142489a43e89e
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/patches/ref_omap2plus_defconfig
+++ b/patches/ref_omap2plus_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 5.10.73 Kernel Configuration
+# Linux/arm 5.10.78 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="arm-linux-gnueabi-gcc (GCC) 10.3.0"
 CONFIG_CC_IS_GCC=y
@@ -191,6 +191,7 @@ CONFIG_ELF_CORE=y
 CONFIG_BASE_FULL=y
 CONFIG_FUTEX=y
 CONFIG_FUTEX_PI=y
+CONFIG_HAVE_FUTEX_CMPXCHG=y
 CONFIG_EPOLL=y
 CONFIG_SIGNALFD=y
 CONFIG_TIMERFD=y
