ci: working on ccache, which branch are we on
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: robertcnelson/debian-bullseye-slim-ti-linux-kernel-dev:latest
 build:
   stage: build
   script:
+    - git branch
     - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
