ci: try backing up ccache
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,12 +3,17 @@ image: robertcnelson/debian-bullseye-slim-ti-linux-kernel-dev:latest
 build:
   stage: build
   script:
-    - git branch
+    - . version.sh && echo $BRANCH
+    - ccache -s
+    - rsync -av /mnt/yocto-cache/$BRANCH/* /root/.cache/ccache/ || true
     - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
     - echo "CORES=12" >> system.sh
     - ./build_deb.sh
+    - ccache -s
+    - mkdir -p /mnt/yocto-cache/$BRANCH/ || true
+    - rsync -av /root/.cache/ccache/* /mnt/yocto-cache/$BRANCH/  || true
   artifacts:
     paths:
       - "deploy/linux-image-*.deb"
