--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,15 +5,16 @@ build:
   script:
     - . version.sh && echo $BRANCH
     - ccache -s
-    #- rsync -av /mnt/yocto-cache/$BRANCH/* /root/.cache/ccache/ || true
-    #- ccache -s
+    - mkdir -p /mnt/yocto-cache/ccache/$BRANCH/ || true
+    - rsync -av --usermap=1000:1000 /mnt/yocto-cache/ccache/$BRANCH/* /root/.cache/ccache/ || true
+    - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
     - echo "CORES=12" >> system.sh
     - ./build_deb.sh
     - ccache -s
-    #- mkdir -p /mnt/yocto-cache/$BRANCH/ || true
-    #- rsync -av /root/.cache/ccache/* /mnt/yocto-cache/$BRANCH/ || true
+    - mkdir -p /mnt/yocto-cache/ccache/$BRANCH/ || true
+    - rsync -av --usermap=1000:1000 /root/.cache/ccache/* /mnt/yocto-cache/ccache/$BRANCH/ || true
   artifacts:
     paths:
       - "deploy/linux-image-*.deb"
