ci: create /root/.cache/ccache/ if it doesnt exist
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build:
     - . version.sh && echo $BRANCH
     - ccache -s
     - mkdir -p /mnt/yocto-cache/ccache/$BRANCH/ || true
-    - rsync -av /mnt/yocto-cache/ccache/$BRANCH/* /root/.cache/ccache/ || true
+    - mkdir -p /root/.cache/ccache/ ; rsync -av /mnt/yocto-cache/ccache/$BRANCH/* /root/.cache/ccache/ || true
     - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
