ci: cleanup after build
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build:
     - . version.sh && echo $BRANCH
     - ccache -s
     - mkdir -p /mnt/yocto-cache/ccache/$BRANCH/ || true
-    - mkdir -p /root/.cache/ccache/ ; rsync -a /mnt/yocto-cache/ccache/$BRANCH/* /root/.cache/ccache/ || true
+    - mkdir -p /root/.cache/ccache/ ; rsync -aHAXx /mnt/yocto-cache/ccache/$BRANCH/* /root/.cache/ccache/ || true
     - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
@@ -14,7 +14,7 @@ build:
     - ./build_deb.sh
     - ccache -s
     - mkdir -p /mnt/yocto-cache/ccache/$BRANCH/ || true
-    - rsync -a --no-o --no-g --no-perms --omit-dir-times --usermap=1000:1000 /root/.cache/ccache/* /mnt/yocto-cache/ccache/$BRANCH/ || true
+    - rsync -aHAXx --no-o --no-g --no-perms --omit-dir-times --usermap=1000:1000 /root/.cache/ccache/* /mnt/yocto-cache/ccache/$BRANCH/ --delete || true
   artifacts:
     paths:
       - "deploy/linux-image-*.deb"
