ci: cleanup order of mkdir
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,8 @@ build:
   stage: build
   script:
     - . version.sh && echo $BRANCH
+    - mkdir -p /root/.cache/ccache/ || true
     - ccache -s
-    - mkdir -p /root/.cache/ccache/
     - tar -xf /mnt/yocto-cache/ccache/ccache-$BRANCH.tar.gz -C / || true
     - ccache -s
     - cp -v system.sh.sample system.sh
